// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Cascader Select 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "11",
            },
            Object {
              "label": "选项二",
              "value": "12",
            },
          ],
          "label": "选项一",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "21",
            },
            Object {
              "label": "选项二",
              "value": "22",
            },
          ],
          "label": "选项一",
          "value": "2",
        },
      ]
    }
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          请选择
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "11",
                  },
                  Object {
                    "label": "选项二",
                    "value": "12",
                  },
                ],
                "label": "选项一",
                "value": "1",
              },
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "21",
                  },
                  Object {
                    "label": "选项二",
                    "value": "22",
                  },
                ],
                "label": "选项一",
                "value": "2",
              },
            ]
          }
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "11",
                    },
                    Object {
                      "label": "选项二",
                      "value": "12",
                    },
                  ],
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "21",
                    },
                    Object {
                      "label": "选项二",
                      "value": "22",
                    },
                  ],
                  "label": "选项一",
                  "value": "2",
                },
              ]
            }
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "11",
                      },
                      Object {
                        "label": "选项二",
                        "value": "12",
                      },
                    ],
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "21",
                      },
                      Object {
                        "label": "选项二",
                        "value": "22",
                      },
                    ],
                    "label": "选项一",
                    "value": "2",
                  },
                ]
              }
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <Popup
                onMaskClick={[Function]}
                visible={false}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={false}
                />
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Cascader Select init value 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayAddon="-"
  value={
    Array [
      "1",
      "12",
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "11",
            },
            Object {
              "label": "选项二",
              "value": "12",
            },
          ],
          "label": "选项一",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "21",
            },
            Object {
              "label": "选项二",
              "value": "22",
            },
          ],
          "label": "选项一",
          "value": "2",
        },
      ]
    }
    displayAddon="-"
    forwardedRef={null}
    value={
      Array [
        "1",
        "12",
      ]
    }
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayAddon="-"
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      value={
        Array [
          "1",
          "12",
        ]
      }
      valueMember="value"
    >
      <div
        className="za-select"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          选项一
          选项二
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "11",
                  },
                  Object {
                    "label": "选项二",
                    "value": "12",
                  },
                ],
                "label": "选项一",
                "value": "1",
              },
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "21",
                  },
                  Object {
                    "label": "选项二",
                    "value": "22",
                  },
                ],
                "label": "选项一",
                "value": "2",
              },
            ]
          }
          displayAddon="-"
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          value={
            Array [
              "1",
              "12",
            ]
          }
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "11",
                    },
                    Object {
                      "label": "选项二",
                      "value": "12",
                    },
                  ],
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "21",
                    },
                    Object {
                      "label": "选项二",
                      "value": "22",
                    },
                  ],
                  "label": "选项一",
                  "value": "2",
                },
              ]
            }
            displayAddon="-"
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            value={
              Array [
                "1",
                "12",
              ]
            }
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "11",
                      },
                      Object {
                        "label": "选项二",
                        "value": "12",
                      },
                    ],
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "21",
                      },
                      Object {
                        "label": "选项二",
                        "value": "22",
                      },
                    ],
                    "label": "选项一",
                    "value": "2",
                  },
                ]
              }
              displayAddon="-"
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              value={
                Array [
                  "1",
                  "12",
                ]
              }
              valueMember="value"
              visible={false}
            >
              <Popup
                onMaskClick={[Function]}
                visible={false}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={false}
                />
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Select 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          请选择
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <Popup
                onMaskClick={[Function]}
                visible={false}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={false}
                />
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Select disable visible 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  disabeld={true}
  visible={false}
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    disabeld={true}
    forwardedRef={null}
    visible={false}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      disabeld={true}
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
      visible={false}
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          请选择
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          disabeld={true}
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          valueMember="value"
          visible={true}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            disabeld={true}
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            valueMember="value"
            visible={true}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              disabeld={true}
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={true}
            >
              <Popup
                onMaskClick={[Function]}
                visible={true}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={true}
                >
                  <Portal
                    containerInfo={
                      <div
                        class=" popup-container"
                      >
                        <div
                          class="za-popup za-popup--bottom za-popup--mask za-popup--hidden"
                          role="dialog"
                        >
                          <div
                            class="za-popup__wrapper"
                            role="document"
                            style="transition-duration: 200ms;"
                          >
                            <div
                              class="za-picker"
                            >
                              <div
                                class="za-picker__header"
                              >
                                <div
                                  class="za-picker__cancel"
                                >
                                  取消
                                </div>
                                <div
                                  class="za-picker__title"
                                >
                                  请选择
                                </div>
                                <div
                                  class="za-picker__submit"
                                >
                                  确定
                                </div>
                              </div>
                              <div
                                class="za-picker-view"
                              >
                                <div
                                  class="za-picker-view__content"
                                >
                                  <div
                                    class="za-wheel"
                                  >
                                    <div
                                      class="za-wheel__content"
                                      style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: translate(0px,NaNpx) scale(1);"
                                    >
                                      <div
                                        class="za-wheel__item za-wheel__item--selected"
                                        style="pointer-events: none; transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: rotateX(NaNdeg);"
                                      >
                                        选项一
                                      </div>
                                      <div
                                        class="za-wheel__item"
                                        style="pointer-events: none; transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: rotateX(NaNdeg);"
                                      >
                                        选项二
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="za-picker-view__mask za-picker-view__mask--top"
                                />
                                <div
                                  class="za-picker-view__mask za-picker-view__mask--bottom"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className="za-popup za-popup--bottom za-popup--mask za-popup--hidden"
                      role="dialog"
                    >
                      <div
                        className="za-popup__wrapper"
                        role="document"
                        style={
                          Object {
                            "WebkitTransitionDuration": "200ms",
                            "transitionDuration": "200ms",
                          }
                        }
                      >
                        <div
                          className="za-picker"
                          onClick={[Function]}
                        >
                          <div
                            className="za-picker__header"
                          >
                            <div
                              className="za-picker__cancel"
                              onClick={[Function]}
                            >
                              取消
                            </div>
                            <div
                              className="za-picker__title"
                            >
                              请选择
                            </div>
                            <div
                              className="za-picker__submit"
                              onClick={[Function]}
                            >
                              确定
                            </div>
                          </div>
                          <PickerView
                            cols={Infinity}
                            dataSource={
                              Array [
                                Object {
                                  "label": "选项一",
                                  "value": "1",
                                },
                                Object {
                                  "label": "选项二",
                                  "value": "2",
                                },
                              ]
                            }
                            disabeld={true}
                            disabled={false}
                            itemRender={[Function]}
                            localeCode="zh-cn"
                            onCancel={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onOk={[Function]}
                            onTransition={[Function]}
                            prefixCls="za-picker-view"
                            value={
                              Array [
                                "1",
                              ]
                            }
                            valueMember="value"
                            visible={true}
                          >
                            <div
                              className="za-picker-view"
                            >
                              <div
                                className="za-picker-view__content"
                              >
                                <Wheel
                                  dataSource={
                                    Array [
                                      Object {
                                        "label": "选项一",
                                        "value": "1",
                                      },
                                      Object {
                                        "label": "选项二",
                                        "value": "2",
                                      },
                                    ]
                                  }
                                  disabled={false}
                                  itemRender={[Function]}
                                  key="0"
                                  onChange={[Function]}
                                  onTransition={[Function]}
                                  prefixCls="za-wheel"
                                  value="1"
                                  valueMember="value"
                                >
                                  <div
                                    className="za-wheel"
                                  >
                                    <div
                                      className="za-wheel__content"
                                    >
                                      <div
                                        className="za-wheel__item za-wheel__item--selected"
                                        key="0"
                                      >
                                        选项一
                                      </div>
                                      <div
                                        className="za-wheel__item"
                                        key="1"
                                      >
                                        选项二
                                      </div>
                                    </div>
                                  </div>
                                </Wheel>
                              </div>
                              <div
                                className="za-picker-view__mask za-picker-view__mask--top"
                              />
                              <div
                                className="za-picker-view__mask za-picker-view__mask--bottom"
                              />
                            </div>
                          </PickerView>
                        </div>
                      </div>
                      <Mask
                        className=""
                        onClick={[Function]}
                        prefixCls="za-mask"
                        style={
                          Object {
                            "WebkitAnimationDuration": "200ms",
                            "animationDuration": "200ms",
                          }
                        }
                        type="normal"
                        visible={false}
                      />
                    </div>
                  </Portal>
                </Portal>
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Select disabled 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  disabeld={true}
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    disabeld={true}
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      disabeld={true}
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          请选择
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          disabeld={true}
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          valueMember="value"
          visible={true}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            disabeld={true}
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            valueMember="value"
            visible={true}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              disabeld={true}
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={true}
            >
              <Popup
                onMaskClick={[Function]}
                visible={true}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={true}
                >
                  <Portal
                    containerInfo={
                      <div
                        class=" popup-container"
                      >
                        <div
                          class="za-popup za-popup--bottom za-popup--mask za-popup--hidden"
                          role="dialog"
                        >
                          <div
                            class="za-popup__wrapper"
                            role="document"
                            style="transition-duration: 200ms;"
                          >
                            <div
                              class="za-picker"
                            >
                              <div
                                class="za-picker__header"
                              >
                                <div
                                  class="za-picker__cancel"
                                >
                                  取消
                                </div>
                                <div
                                  class="za-picker__title"
                                >
                                  请选择
                                </div>
                                <div
                                  class="za-picker__submit"
                                >
                                  确定
                                </div>
                              </div>
                              <div
                                class="za-picker-view"
                              >
                                <div
                                  class="za-picker-view__content"
                                >
                                  <div
                                    class="za-wheel"
                                  >
                                    <div
                                      class="za-wheel__content"
                                      style="transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: translate(0px,NaNpx) scale(1);"
                                    >
                                      <div
                                        class="za-wheel__item za-wheel__item--selected"
                                        style="pointer-events: none; transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: rotateX(NaNdeg);"
                                      >
                                        选项一
                                      </div>
                                      <div
                                        class="za-wheel__item"
                                        style="pointer-events: none; transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); transition-duration: 800ms; transform: rotateX(NaNdeg);"
                                      >
                                        选项二
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="za-picker-view__mask za-picker-view__mask--top"
                                />
                                <div
                                  class="za-picker-view__mask za-picker-view__mask--bottom"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className="za-popup za-popup--bottom za-popup--mask za-popup--hidden"
                      role="dialog"
                    >
                      <div
                        className="za-popup__wrapper"
                        role="document"
                        style={
                          Object {
                            "WebkitTransitionDuration": "200ms",
                            "transitionDuration": "200ms",
                          }
                        }
                      >
                        <div
                          className="za-picker"
                          onClick={[Function]}
                        >
                          <div
                            className="za-picker__header"
                          >
                            <div
                              className="za-picker__cancel"
                              onClick={[Function]}
                            >
                              取消
                            </div>
                            <div
                              className="za-picker__title"
                            >
                              请选择
                            </div>
                            <div
                              className="za-picker__submit"
                              onClick={[Function]}
                            >
                              确定
                            </div>
                          </div>
                          <PickerView
                            cols={Infinity}
                            dataSource={
                              Array [
                                Object {
                                  "label": "选项一",
                                  "value": "1",
                                },
                                Object {
                                  "label": "选项二",
                                  "value": "2",
                                },
                              ]
                            }
                            disabeld={true}
                            disabled={false}
                            itemRender={[Function]}
                            localeCode="zh-cn"
                            onCancel={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onOk={[Function]}
                            onTransition={[Function]}
                            prefixCls="za-picker-view"
                            value={
                              Array [
                                "1",
                              ]
                            }
                            valueMember="value"
                            visible={true}
                          >
                            <div
                              className="za-picker-view"
                            >
                              <div
                                className="za-picker-view__content"
                              >
                                <Wheel
                                  dataSource={
                                    Array [
                                      Object {
                                        "label": "选项一",
                                        "value": "1",
                                      },
                                      Object {
                                        "label": "选项二",
                                        "value": "2",
                                      },
                                    ]
                                  }
                                  disabled={false}
                                  itemRender={[Function]}
                                  key="0"
                                  onChange={[Function]}
                                  onTransition={[Function]}
                                  prefixCls="za-wheel"
                                  value="1"
                                  valueMember="value"
                                >
                                  <div
                                    className="za-wheel"
                                  >
                                    <div
                                      className="za-wheel__content"
                                    >
                                      <div
                                        className="za-wheel__item za-wheel__item--selected"
                                        key="0"
                                      >
                                        选项一
                                      </div>
                                      <div
                                        className="za-wheel__item"
                                        key="1"
                                      >
                                        选项二
                                      </div>
                                    </div>
                                  </div>
                                </Wheel>
                              </div>
                              <div
                                className="za-picker-view__mask za-picker-view__mask--top"
                              />
                              <div
                                className="za-picker-view__mask za-picker-view__mask--bottom"
                              />
                            </div>
                          </PickerView>
                        </div>
                      </div>
                      <Mask
                        className=""
                        onClick={[Function]}
                        prefixCls="za-mask"
                        style={
                          Object {
                            "WebkitAnimationDuration": "200ms",
                            "animationDuration": "200ms",
                          }
                        }
                        type="normal"
                        visible={false}
                      />
                    </div>
                  </Portal>
                </Portal>
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select render defaultValue correctly  1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="2"
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    defaultValue="2"
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      defaultValue="2"
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "请选择",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          请选择
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          defaultValue="2"
          itemRender={[Function]}
          localeCode="zh-cn"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            defaultValue="2"
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="zh-cn"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              defaultValue="2"
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "取消",
                  "okText": "确定",
                  "title": "请选择",
                }
              }
              localeCode="zh-cn"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <Popup
                onMaskClick={[Function]}
                visible={false}
              >
                <Portal
                  animationDuration={200}
                  autoClose={false}
                  direction="bottom"
                  handlePortalUnmount={[Function]}
                  mask={true}
                  maskType="normal"
                  onMaskClick={[Function]}
                  prefixCls="za-popup"
                  stayTime={3000}
                  visible={false}
                />
              </Popup>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;
